RESOLVED FIXED41450
RenderSVGContainer/RenderSVGRoot report wrong strokeBoundingBox()
https://bugs.webkit.org/show_bug.cgi?id=41450
Summary RenderSVGContainer/RenderSVGRoot report wrong strokeBoundingBox()
Nikolas Zimmermann
Reported 2010-07-01 02:34:36 PDT
RenderSVGContainer/RenderSVGRoot::strokeBoundingBox() actually dump their childrens repaintRectInLocalCoordinates(). This is only visible when inspecting such nodes with our WebInspector - the highlighted rects are too small, eg. in LayoutTests/svg/filters/filter-clip.svg
Attachments
Initial patch (7.32 KB, patch)
2010-07-01 02:38 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2010-07-01 02:38:23 PDT
Created attachment 60217 [details] Initial patch
Dirk Schulze
Comment 2 2010-07-01 02:43:00 PDT
Comment on attachment 60217 [details] Initial patch r=me. Fix the typo acftual, mentioned on IRC and upload it :-)
Nikolas Zimmermann
Comment 3 2010-07-01 02:47:12 PDT
Landed in r62244.
Note You need to log in before you can comment on or make changes to this bug.